@@ -1,0 +1,52 @@
+---
+sidebar: sidebar 
+permalink: manage-s3-access-points.html 
+keywords: S3, s3, access points, manage access points, change access points, update access points, modify access points 
+summary: NetApp Workload Factoryでボリュームの S3 アクセス ポイントを管理します。 
+---
+= NetApp Workload Factoryでボリュームの S3 アクセス ポイントを管理する
+:allow-uri-read: 
+:icons: font
+:imagesdir: ./media/
+
+
+[role="lead"]
+NetApp Workload Factoryでボリュームの S3 アクセス ポイントを管理します。Workload Factory コンソールを使用して、既存のボリュームに S3 アクセス ポイントを割り当てたり、S3 アクセス ポイントを削除したりできます。
+
+.開始する前に
+S3 アクセス ポイントを持つ既存のボリュームが必要です。
+
+.手順
+. いずれかを使用してログインしlink:https://docs.netapp.com/us-en/workload-setup-admin/console-experiences.html["コンソールエクスペリエンス"^]ます。
+. ストレージ タイルで、[ストレージへ移動] を選択します。
+. [ストレージ] メニューから、*FSx for ONTAP* を選択します。
+. *FSx for ONTAP*から、更新するボリュームがあるファイルシステムのアクションメニューを選択し、*管理*を選択します。
+. ファイルシステムの概要で、*[ボリューム]*タブを選択します。
+. [ボリューム] タブから、S3 アクセス ポイントを管理するボリュームのアクション メニューを選択し、[*詳細アクション*] を選択してから [*S3 アクセス ポイントの管理*] を選択します。
+. S3 アクセス ポイントの管理ページでは、アクセス ポイントを作成して接続したり、既存のアクセス ポイントを削除したりできます。
++
+[role="tabbed-block"]
+====
+.既存のボリュームに S3 アクセス ポイントを作成して接続する
+--
+.. *S3 アクセス ポイントの作成と接続* を選択します。
+.. *S3 アクセス ポイントの作成と接続* ダイアログで、次の情報を入力します。
++
+*** *S3 アクセス ポイント名*: S3 アクセス ポイントの名前を入力します。
+*** *ユーザー*: ボリュームへのアクセス権を持つ既存のユーザーを選択するか、新しいユーザーを作成します。
+*** *ユーザー タイプ*: ユーザー タイプとして *UNIX* または *Windows* を選択します。
+
+
+.. *作成して添付*を選択します。
+
+
+--
+.ボリュームから既存の S3 アクセス ポイントを削除する
+--
+.. 削除する S3 アクセス ポイントのアクション メニューを選択し、[デタッチ] を選択します。
+.. *S3 アクセス ポイントの切断と削除* ダイアログで、*切断と削除* を選択して、ボリュームから S3 アクセス ポイントを削除します。
+
+
+--
+====
+
